# warp-hello

./: TODO  cabal.project.freeze  default.nix  flake.nix  shell.nix  supported-systems.nix  warp-hello.cabal
.github/workflows/: nix.yml
app/: Main.hs
nix/: flake-compat.nix  pre-commit-hooks.nix
nix/haskell/: default.nix  plan-sha256  project.nix  tools.nix
nix/haskell/materialized/: default.nix
nix/haskell/materialized/.plan.nix/: warp-hello.nix
nixos/modules/: warp-hello.nix
