cabal-version: 2.4
name:          warp-hello
version:       0.1.0.0
author:        Richard Wallace
maintainer:    rwallace@thewallacepack.net

executable warp-hello
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base        >=4.14
    , http-types
    , wai
    , warp
